Fix overflow in related posts.

--- a/assets/css/blog/related.css
+++ b/assets/css/blog/related.css
@@ -1,4 +1,5 @@
 .related-posts {
+    overflow-x: hidden;
     margin-top: 60px;
 }
 
